@@ -19,7 +19,7 @@ This is how a ruote engine is setup with a ruote-dm storage (postgres) and a wor
   
   engine = Ruote::Engine.new(
     Ruote::Worker.new(
-      Ruote::Dm::DmStorage.new(:default)))
+      Ruote::Dm::Storage.new(:default)))
 
   # ...
 
